@@ -32,14 +32,6 @@ export class Weather {
       this.GetGeo();
     },500)
   }
-  //Create a method and then call it via ionViewDidLoad()
-  InitializeLoader(){
-    let loader=this.loadingCtrl.create({
-      content: "Loading Weather Data...",
-      duration:3000
-    })
-    loader.present();
-  }
   // Adding Geolocation method and calling it in constructor
   GetGeo(){
     //Rearranging Loader function here.
@@ -54,15 +46,16 @@ export class Weather {
       this.currentloc.lat=pos.coords.latitude;
       this.currentloc.lon=pos.coords.longitude;
       this.currentloc.timestamp=pos.timestamp;
-      return this.currentloc;
-      //Promise added below for asynchronous process.
+      return this.currentloc;  // Taking the Currentloc interface and adding to promise below via "then"
     }).then(currentloc=>{
-        //Stored the values returned from asynchronous to interface.
-        this.weatherService.getWeather().then(theResult=>{
+      //Promise added below for asynchronous process.
+        //Storing the values returned from asynchronous to variables.
+        this.weatherService.getWeather(currentloc).then(theResult=>{
           this.theWeather=theResult;
           this.currentData=this.theWeather.currently;
           this.daily=this.theWeather.daily;
           loader.dismiss();
+          //Post the above method storing from interface to variables, We are passing it to weather.service.ts to call it.
       });
     });
   }
