@@ -1,5 +1,6 @@
 import { Injectable } from '@angular/core';
 import { Http } from '@angular/http';
+import { CurrentLoc } from "../interfaces/current-loc";
 import 'rxjs/add/operator/map';
 
 /*
@@ -15,21 +16,24 @@ export class WeatherService {
   constructor(public http: Http) {
     console.log('Hello WeatherService Provider');
   }
-  load(){
+  //Adding Interface to the Load parameter to provide the location details.
+  load(currentLoc:CurrentLoc){
     if(this.data){
       return Promise.resolve(this.data);
     }
     return new Promise(resolve=>{
-      //Calling Live load from darksky(api call)
-      this.http.get('/api/53.3603142,-6.3150542000000005').map(res=>res.json()).subscribe(data=>{
+      //Calling darksky with adding the data returned from Interface CurrentLoc
+      this.http.get('/api/'+currentLoc.lat + ',' + currentLoc.lon).map(res=>res.json()).subscribe(data=>{
         this.data=data;
         resolve(this.data);
       });
     });
   }
-  getWeather(){
-    return this.load().then(data=>{
+  //Also passing the currentLoc to below function too to load.
+  getWeather(currentLoc: CurrentLoc){
+    this.data=null;
+    return this.load(currentLoc).then(data=>{
       return data;
-    })
+    });
   }
 }
